load("@protobuf//bazel:proto_library.bzl", "proto_library")
load(
    "//tools/proto:defs.bzl",
    "guardian_buf_breaking_test",
    "guardian_buf_lint_test",
    "guardian_go_proto_codegen_check",
)

package(default_visibility = ["//visibility:public"])

exports_files([
    "buf.yaml",
    "testdata/buf/analytics-events.binpb",
    "testdata/buf/authorization.binpb",
    "testdata/buf/cockpit.binpb",
])

# Vendored third-party (buf.build/bufbuild/protovalidate); not linted (see
# buf.yaml ignore). Importable as buf/validate/validate.proto.
proto_library(
    name = "buf_validate_proto",
    srcs = ["buf/validate/validate.proto"],
    strip_import_prefix = "/src/proto",
    deps = [
        "@protobuf//:descriptor_proto",
        "@protobuf//:duration_proto",
        "@protobuf//:field_mask_proto",
        "@protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "analytics_events_proto",
    srcs = ["guardian/analytics/v1/events.proto"],
    strip_import_prefix = "/src/proto",
    deps = [":buf_validate_proto"],
)

guardian_buf_lint_test(
    name = "analytics_events_buf_lint_test",
    module = ".",
    targets = [":analytics_events_proto"],
)

guardian_buf_breaking_test(
    name = "analytics_events_buf_breaking_test",
    against = "testdata/buf/analytics-events.binpb",
    module = ".",
    targets = [":analytics_events_proto"],
)

filegroup(
    name = "analytics_events_gen_go",
    srcs = [
        "//src/proto/gen/go/guardian/analytics/v1:sources",
        "//src/proto/gen/go/guardian/analytics/v1/analyticsv1connect:sources",
    ],
)

proto_library(
    name = "cockpit_proto",
    srcs = ["guardian/cockpit/v1/cockpit.proto"],
    strip_import_prefix = "/src/proto",
)

guardian_buf_lint_test(
    name = "cockpit_buf_lint_test",
    module = ".",
    targets = [":cockpit_proto"],
)

guardian_buf_breaking_test(
    name = "cockpit_buf_breaking_test",
    against = "testdata/buf/cockpit.binpb",
    module = ".",
    targets = [":cockpit_proto"],
)

filegroup(
    name = "cockpit_gen_go",
    srcs = [
        "//src/proto/gen/go/guardian/cockpit/v1:sources",
        "//src/proto/gen/go/guardian/cockpit/v1/cockpitv1connect:sources",
    ],
)

guardian_go_proto_codegen_check(
    name = "cockpit_go_codegen_check",
    generated_root = "src/proto/gen/go",
    generated_sources = ":cockpit_gen_go",
    go_module = "github.com/guardian-intelligence/guardian/src/proto/gen/go",
    proto_files = ["guardian/cockpit/v1/cockpit.proto"],
    proto_path = "src/proto",
    proto_srcs = ["guardian/cockpit/v1/cockpit.proto"],
)

guardian_go_proto_codegen_check(
    name = "analytics_events_go_codegen_check",
    generated_root = "src/proto/gen/go",
    generated_sources = ":analytics_events_gen_go",
    go_module = "github.com/guardian-intelligence/guardian/src/proto/gen/go",
    proto_files = ["guardian/analytics/v1/events.proto"],
    proto_path = "src/proto",
    # events.proto imports the vendored buf/validate/validate.proto (which in
    # turn imports these WKTs); stage them so protoc resolves the import. Only
    # events.proto is generated (proto_files).
    proto_srcs = [
        "guardian/analytics/v1/events.proto",
        "buf/validate/validate.proto",
        "@protobuf//:well_known_protos",
    ],
)

proto_library(
    name = "authorization_proto",
    srcs = ["guardian/authorization/v1/authorization.proto"],
    strip_import_prefix = "/src/proto",
)

guardian_buf_lint_test(
    name = "authorization_buf_lint_test",
    module = ".",
    targets = [":authorization_proto"],
)

guardian_buf_breaking_test(
    name = "authorization_buf_breaking_test",
    against = "testdata/buf/authorization.binpb",
    module = ".",
    targets = [":authorization_proto"],
)

filegroup(
    name = "authorization_gen_go",
    srcs = [
        "//src/proto/gen/go/guardian/authorization/v1:sources",
        "//src/proto/gen/go/guardian/authorization/v1/authorizationv1connect:sources",
    ],
)

guardian_go_proto_codegen_check(
    name = "authorization_go_codegen_check",
    generated_root = "src/proto/gen/go",
    generated_sources = ":authorization_gen_go",
    go_module = "github.com/guardian-intelligence/guardian/src/proto/gen/go",
    proto_files = ["guardian/authorization/v1/authorization.proto"],
    proto_path = "src/proto",
    proto_srcs = ["guardian/authorization/v1/authorization.proto"],
)
