load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library", "go_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//tools/format:defs.bzl", "go_format")

go_format()

# Manifest template as test data: the CLI's render test pins that the
# whole manifest guards on environment platform.status.domains (a site without
# domains deploys no status pod).
filegroup(
    name = "manifest",
    srcs = ["k8s/status.yaml.tmpl"],
    visibility = ["//src/guardian-cli:__subpackages__"],
)

go_library(
    name = "status_lib",
    srcs = [
        "collect.go",
        "document.go",
        "main.go",
        "web.go",
    ],
    importpath = "github.com/guardian-intelligence/guardian/src/status",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_burntsushi_toml//:toml",
        "@com_github_caddyserver_certmagic//:certmagic",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_binary(
    name = "status",
    embed = [":status_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_test(
    name = "status_test",
    srcs = [
        "collect_test.go",
        "document_test.go",
        "web_test.go",
    ],
    embed = [":status_lib"],
    deps = [
        "@com_github_burntsushi_toml//:toml",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

# The fleet is linux/amd64 only; pin the image binary's platform regardless
# of the build host. pure=on keeps it cgo-free and static.
go_cross_binary(
    name = "status_linux_amd64",
    platform = "@io_bazel_rules_go//go/toolchain:linux_amd64",
    target = ":status",
)

pkg_tar(
    name = "status_layer",
    files = {
        ":status_linux_amd64": "usr/bin/status",
        # The ubuntu base has no CA store; ACME needs to verify public TLS.
        # Path is where Go's crypto/x509 looks on Debian-family systems.
        "@cacert_pem//file": "etc/ssl/certs/ca-certificates.crt",
    },
    modes = {
        "usr/bin/status": "0755",
        "etc/ssl/certs/ca-certificates.crt": "0644",
    },
)

oci_image(
    name = "image",
    base = "@ubuntu_noble_base",
    entrypoint = ["/usr/bin/status"],
    exposed_ports = [
        "8080/tcp",
        "8443/tcp",
    ],
    tars = [":status_layer"],
    visibility = ["//visibility:public"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["guardian/status:dev"],
)
