package(default_visibility = ["//visibility:private"])

# The version-skew conformance test reads the kubectl and talosctl pins to
# hold them to the cluster's kubernetesVersion and Talos installer minor.
exports_files(
    ["multitool.lock.json"],
    visibility = ["//src/infrastructure/tests:__pkg__"],
)

# Every pinned tool artifact, buildable as one target. Nothing else in CI
# fetches most of these archives (bazel fetches lazily and //:build does not
# depend on them), so without this a pin bump with a bad hash, a re-tagged
# upstream artifact, or a moved binary path merges green and fails at first
# operator use. Building this target proves fetch + unpack + declared layout
# (and compiles hauler from source) — nothing more; it does not execute the
# binaries or validate behavior. Toolchain resolution fetches the host
# platform's half of the lockfile (linux in CI); the macOS half is proven by
# `multitool-repin --check` in CI on lockfile diffs (hash, archive member,
# and tag/filename agreement — not extraction by rules_multitool itself).
#
# TODO: replace with a real binary vetting pipeline — upstream signature or
# attestation verification per tool, and behavioral exercise of each tool's
# actual job where it can run hermetically (restic repo roundtrip, cosign
# offline bundle verify, k6 local run). talm and gitleaks already get real
# exercise in CI (render suite, secret-scan).
filegroup(
    name = "pins",
    srcs = [
        "//src/tools/hauler",
        "//src/tools/restic",
        "@multitool//tools/bao",
        "@multitool//tools/boot-to-talos",
        "@multitool//tools/cilium",
        "@multitool//tools/clickhouse",
        "@multitool//tools/cosign",
        "@multitool//tools/curl",
        "@multitool//tools/doggo",
        "@multitool//tools/flux",
        "@multitool//tools/gh",
        "@multitool//tools/gitleaks",
        "@multitool//tools/helm",
        "@multitool//tools/hubble",
        "@multitool//tools/k6",
        "@multitool//tools/kubectl",
        "@multitool//tools/kubectl-cnpg",
        "@multitool//tools/kubectl-oidc_login",
        "@multitool//tools/oras",
        "@multitool//tools/pgbench",
        "@multitool//tools/psql",
        "@multitool//tools/step",
        "@multitool//tools/stern",
        "@multitool//tools/talm",
        "@multitool//tools/talosctl",
        "@multitool//tools/tofu",
        "@multitool//tools/velero",
        "@ruby_linux_amd64//:ruby",
    ],
)
