load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:private"])

# The version-skew conformance test reads the kubectl and talosctl pins to
# hold them to the cluster's kubernetesVersion and Talos installer minor.
exports_files(
    ["multitool.lock.json"],
    visibility = ["//src/infrastructure/tests:__pkg__"],
)

# Every pinned tool artifact, buildable as one target. Tagged manual to stay
# out of the `//...` CI wildcard: the archive set is multi-GB and fetched
# lazily, so CI builds this explicitly only on diffs that can move a pin.
# (A few tools are real data deps of targets inside `//...` — talm via the
# conformance suite, k6/doggo via edge_health — and fetch on every run
# regardless; the tag covers everything reachable only through here.)
# Without it a pin bump with a bad hash, a re-tagged upstream artifact, or a
# moved binary path merges green and fails at first operator use. Building
# this target proves fetch + unpack + declared layout
# (and compiles hauler from source) — nothing more; it does not execute the
# binaries or validate behavior. Toolchain resolution fetches the host
# platform's half of the lockfile (linux in CI); the macOS half is proven by
# :multitool_lock_test (hash, archive member, and tag/filename agreement —
# not extraction by rules_multitool itself).
#
# TODO: replace with a real binary vetting pipeline — upstream signature or
# attestation verification per tool, and behavioral exercise of each tool's
# actual job where it can run hermetically (restic repo roundtrip, cosign
# offline bundle verify, k6 local run). talm and gitleaks already get real
# exercise in CI (render suite, secret-scan).
filegroup(
    name = "pins",
    srcs = [
        "//src/tools/hauler",
        "//src/tools/restic",
        # Both restic archives directly: the genrule's platform select() only
        # pulls the host's half, so without these the darwin pin would merge
        # unverified.
        "@restic_darwin_arm64_bz2//file",
        "@restic_linux_amd64_bz2//file",
        "@multitool//tools/bao",
        "@multitool//tools/boot-to-talos",
        "@multitool//tools/cilium",
        "@multitool//tools/clickhouse",
        "@multitool//tools/cosign",
        "@multitool//tools/curl",
        "@multitool//tools/doggo",
        "@multitool//tools/flux",
        "@multitool//tools/gh",
        "@multitool//tools/gitleaks",
        "@multitool//tools/helm",
        "@multitool//tools/hubble",
        "@multitool//tools/k6",
        "@multitool//tools/kubectl",
        "@multitool//tools/kubectl-cnpg",
        "@multitool//tools/kubectl-oidc_login",
        "@multitool//tools/oras",
        "@multitool//tools/pgbench",
        "@multitool//tools/psql",
        "@multitool//tools/step",
        "@multitool//tools/stern",
        "@multitool//tools/talm",
        "@multitool//tools/talosctl",
        "@multitool//tools/tofu",
        "@multitool//tools/velero",
        "@ruby_linux_amd64//:ruby",
    ],
    tags = ["manual"],
)

# Re-downloads every lockfile entry on both platforms and fails on any stale
# sha256, missing archive member, tag/filename disagreement, or content
# change under an unchanged URL — a hand- or Renovate-bumped pin cannot
# merge stale. The script fetches straight from the upstreams (urllib), so
# Bazel's repository cache cannot mask a dead URL; test caching re-runs it
# exactly when the lockfile or the tool itself changes.
sh_test(
    name = "multitool_lock_test",
    timeout = "long",
    srcs = ["//tools/ops:multitool-repin"],
    args = ["--check"],
    data = ["multitool.lock.json"],
    tags = ["requires-network"],
)
