load("@rules_python//python:defs.bzl", "py_test")

exports_files(
    [
        "multitool-repin",
        "spicedb-qualify",
    ],
    visibility = ["//visibility:public"],
)

py_test(
    name = "cluster_watch_test",
    srcs = ["cluster_watch_test.py"],
    data = ["cluster-watch"],
    python_version = "3.12",
)
