load("@rules_python//python:defs.bzl", "py_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

exports_files(
    [
        "multitool-repin",
        "spicedb-qualify",
    ],
    visibility = ["//visibility:public"],
)

sh_test(
    name = "spicedb_qualify_classifier_test",
    srcs = ["spicedb-qualify-classifier-test"],
    args = [
        "$(location spicedb-qualify)",
        "$(location testdata/spicedb-thumper-mutation-uncertainty.log)",
    ],
    data = [
        "spicedb-qualify",
        "testdata/spicedb-thumper-mutation-uncertainty.log",
    ],
)

py_test(
    name = "cluster_watch_test",
    srcs = ["cluster_watch_test.py"],
    data = ["cluster-watch"],
    python_version = "3.12",
)
