load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")

# Re-export the pulled clickhouse-server layout under a stable in-repo
# runfiles path, same pattern as postgres/gatus: a base-only oci_image
# copies the single-manifest layout verbatim.
oci_image(
    name = "image",
    base = "@clickhouse",
    visibility = ["//visibility:public"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["guardian/clickhouse:dev"],
)
