load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")

# Re-export the pulled Directus layout under a stable in-repo runfiles path.
# DirectusInstance consumes this through the site environment bundle.
oci_image(
    name = "image",
    base = "@directus_12",
    visibility = ["//visibility:public"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["guardian/directus:dev"],
)
