load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "db",
    srcs = [
        "copyfrom.go",
        "db.go",
        "models.go",
        "queries.sql.go",
    ],
    importpath = "github.com/guardian-intelligence/guardian/src/aisucks/db",
    # Only Store may touch the query layer: Insert's conflict handling is a
    # privacy guarantee, and a second consumer could surface what it hides.
    visibility = ["//src/aisucks:__pkg__"],
    deps = [
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgconn",
        "@com_github_jackc_pgx_v5//pgtype",
    ],
)
