load("@rules_oci//oci:defs.bzl", "oci_image")

oci_image(
    name = "controller",
    base = "@cert_manager_controller",
    visibility = ["//visibility:public"],
)

oci_image(
    name = "cainjector",
    base = "@cert_manager_cainjector",
    visibility = ["//visibility:public"],
)

oci_image(
    name = "webhook",
    base = "@cert_manager_webhook",
    visibility = ["//visibility:public"],
)

oci_image(
    name = "startupapicheck",
    base = "@cert_manager_startupapicheck",
    visibility = ["//visibility:public"],
)

oci_image(
    name = "acmesolver",
    base = "@cert_manager_acmesolver",
    visibility = ["//visibility:public"],
)
