load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")

# Manifest template as test data: the CLI's render test pins the
# clickhouse.enabled site gate (dev+gamma deploy the ledger, prod does not
# until its clickhouse-admin Secret exists — docs/runbooks/ledger.md).
filegroup(
    name = "manifest",
    srcs = ["k8s/clickhouse.yaml.tmpl"],
    visibility = ["//src/guardian-cli:__subpackages__"],
)

# Re-export the pulled clickhouse-server layout under a stable in-repo
# runfiles path, same pattern as postgres/gatus: a base-only oci_image
# copies the single-manifest layout verbatim.
oci_image(
    name = "image",
    base = "@clickhouse",
    visibility = ["//visibility:public"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["guardian/clickhouse:dev"],
)
