load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")

# Manifest template as test data: the CLI's render test pins the aisucks
# scrape job's branch on aisucks.podNetwork (static loopback target vs
# kubernetes_sd pod discovery) and the status.monitor gate on blackbox
# targets.
filegroup(
    name = "manifest",
    srcs = ["k8s/otel-collector.yaml.tmpl"],
    visibility = ["//src/guardian-cli:__subpackages__"],
)

# Re-export the pulled opentelemetry-collector-contrib layout under a stable
# in-repo runfiles path, same pattern as postgres/gatus: a base-only
# oci_image copies the single-manifest layout verbatim.
oci_image(
    name = "image",
    base = "@otel_collector_contrib",
    visibility = ["//visibility:public"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["guardian/otel-collector:dev"],
)
