load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")

filegroup(
    name = "manifest",
    srcs = ["k8s/zot.yaml.tmpl"],
    visibility = ["//src/guardian-cli:__subpackages__"],
)

filegroup(
    name = "publisher_secrets_manifest",
    srcs = ["k8s/zot-publisher-secrets.yaml.tmpl"],
    visibility = ["//src/guardian-cli:__subpackages__"],
)

oci_image(
    name = "image",
    base = "@zot",
    visibility = ["//visibility:public"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["guardian/zot:dev"],
)
