filegroup(
    name = "manifests",
    srcs = [
        "database-load.yaml",
        "database-dr.yaml",
        "database-restore.yaml",
        "harbor-oci-read.yaml",
        "http-load.yaml",
        "openbao-load.yaml",
        "kustomization.yaml",
        "storage-smoke.yaml",
    ],
    visibility = ["//visibility:public"],
)

genrule(
    name = "capture-management-evidence",
    srcs = ["capture-management-evidence.sh"],
    outs = ["capture-management-evidence-runner"],
    cmd = "cp $(location capture-management-evidence.sh) $@ && chmod +x $@",
    executable = True,
    visibility = ["//visibility:public"],
)

genrule(
    name = "verify-management-evidence",
    srcs = ["verify-management-evidence.sh"],
    outs = ["verify-management-evidence-runner"],
    cmd = "cp $(location verify-management-evidence.sh) $@ && chmod +x $@",
    executable = True,
    visibility = ["//visibility:public"],
)

genrule(
    name = "hardware-outage-run",
    srcs = ["hardware-outage-run.sh"],
    outs = ["hardware-outage-runner"],
    cmd = "cp $(location hardware-outage-run.sh) $@ && chmod +x $@",
    executable = True,
    visibility = ["//visibility:public"],
)
