filegroup(
    name = "manifests",
    srcs = [
        "database-load.yaml",
        "database-dr.yaml",
        "database-restore.yaml",
        "harbor-oci-read.yaml",
        "http-load.yaml",
        "openbao-load.yaml",
        "kustomization.yaml",
        "storage-smoke.yaml",
    ],
    visibility = ["//visibility:public"],
)

genrule(
    name = "capture-management-evidence",
    srcs = ["capture-management-evidence.sh"],
    outs = ["capture-management-evidence-runner"],
    cmd = "cp $(location capture-management-evidence.sh) $@ && chmod +x $@",
    executable = True,
    visibility = ["//visibility:public"],
)

genrule(
    name = "verify-management-evidence",
    srcs = ["verify-management-evidence.sh"],
    outs = ["verify-management-evidence-runner"],
    cmd = "cp $(location verify-management-evidence.sh) $@ && chmod +x $@",
    executable = True,
    visibility = ["//visibility:public"],
)

genrule(
    name = "verify-management-evidence-smoke",
    srcs = [
        "verify-management-evidence.sh",
        "verify-management-evidence_test.sh",
    ],
    outs = ["verify-management-evidence-smoke.ok"],
    cmd = "bash $(location verify-management-evidence_test.sh) $(location verify-management-evidence.sh) $@",
    visibility = ["//visibility:public"],
)

genrule(
    name = "verify-management-evidence-suite",
    srcs = ["verify-management-evidence-suite.sh"],
    outs = ["verify-management-evidence-suite-runner"],
    cmd = "cp $(location verify-management-evidence-suite.sh) $@ && chmod +x $@",
    executable = True,
    visibility = ["//visibility:public"],
)

genrule(
    name = "verify-management-evidence-suite-smoke",
    srcs = [
        "verify-management-evidence-suite.sh",
        "verify-management-evidence-suite_test.sh",
    ],
    outs = ["verify-management-evidence-suite-smoke.ok"],
    cmd = "bash $(location verify-management-evidence-suite_test.sh) $(location verify-management-evidence-suite.sh) $@",
    visibility = ["//visibility:public"],
)

genrule(
    name = "verify-infrastructure-reports",
    srcs = ["verify-infrastructure-reports.sh"],
    outs = ["verify-infrastructure-reports-runner"],
    cmd = "cp $(location verify-infrastructure-reports.sh) $@ && chmod +x $@",
    executable = True,
    visibility = ["//visibility:public"],
)

genrule(
    name = "verify-infrastructure-reports-smoke",
    srcs = [
        "verify-infrastructure-reports.sh",
        "verify-infrastructure-reports_test.sh",
    ],
    outs = ["verify-infrastructure-reports-smoke.ok"],
    cmd = "bash $(location verify-infrastructure-reports_test.sh) $(location verify-infrastructure-reports.sh) $@",
    visibility = ["//visibility:public"],
)

genrule(
    name = "management-evidence-run",
    srcs = ["management-evidence-run.sh"],
    outs = ["management-evidence-runner"],
    cmd = "cp $(location management-evidence-run.sh) $@ && chmod +x $@",
    executable = True,
    visibility = ["//visibility:public"],
)

genrule(
    name = "hardware-outage-run",
    srcs = ["hardware-outage-run.sh"],
    outs = ["hardware-outage-runner"],
    cmd = "cp $(location hardware-outage-run.sh) $@ && chmod +x $@",
    executable = True,
    visibility = ["//visibility:public"],
)

genrule(
    name = "hardware-outage-run-smoke",
    srcs = [
        "hardware-outage-run.sh",
        "hardware-outage-run_test.sh",
    ],
    outs = ["hardware-outage-run-smoke.ok"],
    cmd = "bash $(location hardware-outage-run_test.sh) $(location hardware-outage-run.sh) $@",
    visibility = ["//visibility:public"],
)

genrule(
    name = "hardware-outage-run-all",
    srcs = ["hardware-outage-run-all.sh"],
    outs = ["hardware-outage-run-all-runner"],
    cmd = "cp $(location hardware-outage-run-all.sh) $@ && chmod +x $@",
    executable = True,
    visibility = ["//visibility:public"],
)
