load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "reports",
    srcs = ["schema.go"],
    importpath = "github.com/guardian-intelligence/guardian/src/infrastructure/reports",
    visibility = ["//visibility:public"],
)

go_test(
    name = "report_contract_test",
    srcs = ["schema_test.go"],
    data = glob(
        ["checked-in/**/*.json"],
        allow_empty = True,
    ),
    embed = [":reports"],
)
